--- a/pages/notice/notice.wxml
+++ b/pages/notice/notice.wxml
@@ -1,44 +1,2 @@
-<view class="quanju">
-  <!-- top -->
-  <view class="top">
-    <van-cell title="景点特色" icon="flower-o" />
-    <view class="top-text">
-      柳州科技馆（新馆）位于柳州市柳东新区文化广场西侧,建筑面积32000m，展陈总面积13000m，是一座具有时代特仙、例州特巴、内一流的特大型科普教育智慧场馆。场馆设有萌动的序曲、家园协奏曲、宇宙的回声、经典的旋律、唱响新未来、生命的咏叹、气象天文等7个主题展厅，共有展品357件（套），展示了各基础学科的原理和先进的科学技术,具有科学性、互动性、创新性、前瞻性、兴趣性，展品互动率达90%以上。
-    </view>
-  </view>
-  <!-- buttom -->
-  <view class="buttom">
-    <!-- 开放时间 -->
-    <view class="buttom-open">
-      <van-cell title="开放时间" icon="clock-o" />
-      <text>园区游玩时间09:30-16:30;如有调整，请以园区现场为准。</text>
-    </view>
-    <!-- 购票须知 -->
-    <view class="buttom-notice">
-      <van-cell title="购票须知" icon="like-o" />
-      <view class="buttom-notice-title">
-        <text>柳州科技馆关于加强疫情防控工作的通告</text>
-      </view>
-    </view>
-    <view class="buttom-notice-text">
-      <text>各位观众：
-
-        根据柳州市新型冠状病毒感染的肺炎疫情联防联控工作领导小组指挥部办公室《关于加快推进柳州巿新冠病毒疫苗接种的通告》文件精神，从2021年8月10日起，科技馆将全面实行“二码联查”
-        (即查验健康码的同时检查新冠病毒疫苗接种标识)，凡进入科技馆的观众原则上须接种新冠病毒疫苗(有禁忌症除外)。
-
-        请广大观众提前规划行程，以免带来不便。同时，请未接种新冠病毒疫苗人员尽快进行接种。让我们同心协力共筑免疫长城，巩固来之不易的疫情防控成果，为保障全民生命健康安全献上“一臂之力”。
-
-
-
-      </text>
-      <view class="tilleb">柳州科技馆</view>
-    </view>
-    <!-- 交通指南 -->
-    <view class="guide">
-      <van-cell title="交通指南" icon="logistics" />
-      <view class="guide-text">
-        <text>市内可以乘坐快1号线到柳东企业总部（柳东政务服务中心）站下车，步行800米到达柳东新区文化广场。</text>
-      </view>
-    </view>
-  </view>
+<view>
 </view>
