--- a/pages/problem/problem.wxml
+++ b/pages/problem/problem.wxml
@@ -1,2 +1,13 @@
 <!--pages/problem/problem.wxml-->
-<van-empty image="network" description="没有常见问题" />
+<view class="box">
+    <view class="item_box"  wx:for="{{[1,2,3]}}" wx:key="index">
+        <view style="display: flex;">
+            <van-image class="portrait" round width="70" height="70" src="" />
+            <view class="item_box_l">
+                <view>跑步30min</view>
+                <view>价值鸡分:300</view>
+            </view>
+        </view>
+        <view class="item_box_r">完成</view>
+    </view>
+</view>
