--- a/pages/security/security.wxml
+++ b/pages/security/security.wxml
@@ -1,12 +1,12 @@
-<!--pages/security/security.wxml-->
-<view class="box1">
-  <text></text>
-  <van-image class="portrait" round width="70" height="70" src="{{userInfo.avatarUrl}}" />
-</view>
-<view class="box2">
-<view>
-  <text>昵称</text>
-  <text>{{userInfo.nickName}}</text>
-</view>
-
+<view class="box">
+    <view class="item_box"  wx:for="{{[1,2,3]}}" wx:key="index">
+        <view style="display: flex;">
+            <van-image class="portrait" round width="70" height="70" src="" />
+            <view class="item_box_l">
+                <view>可乐X1</view>
+                <view>所需鸡分:300</view>
+            </view>
+        </view>
+        <view class="item_box_r">兑换</view>
+    </view>
 </view>
