--- a/pages/security/security.wxss
+++ b/pages/security/security.wxss
@@ -1,27 +1,38 @@
-/* pages/security/security.wxss */
+/* pages/problem/problem.wxss */
 page{
-  background-color: rgba(243, 243, 243, 0.288);
+  background-color: #EBEDF0;
 }
-.box1{
-  height: 50px;
-  background-color: #fff;
-  display: flex;
-  justify-content: space-between;
-  padding: 5%;
-  align-items: center;
+.item_box{
+  width: 95%;
+    background-color: #fff;
+    border-radius: 10px;
+    margin: 15px auto;
+    padding: 15px;
+    font-size: 15px;
+    box-sizing: border-box;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    box-shadow: -1px 9px 11px 0px rgb(255 170 170 / 23%);
 }
-.box2{
-  display: flex;
-  align-items: center;
-  background-color: #fff;
-  border-top: 1px solid rgba(219, 219, 219, 0.342);
-  height: 60px;
+.item_box .item_box_r{
+  background-image: linear-gradient(to right, #ffc3a0 0%, #ffafbd 100%);
+  color: #ffffff;
+  border-radius: 50rpx;
+  height: 66rpx;
+  width: 134rpx;
+  text-align: center;
+  line-height: 66rpx;
+  font-size: 28rpx;
 }
-.box2 view{
-  width: 90%;
-  margin: 0 auto;
-  padding: 10px 0;
-  display: flex;
-  justify-content: space-between;
-  height: 60rpx;
+.item_box_l{
+  margin-left: 20px;
+  font-size: 15px;
+  margin-top: 10px;
+  color: #da9125;
+}
+.item_box_l view:nth-child(2){
+  font-size: 13px;
+  color: #656C74;
+  margin-top: 5px;
 }
