--- a/pages/comment/comment.wxss
+++ b/pages/comment/comment.wxss
@@ -3,7 +3,7 @@ page{
   background-color: #EBEDF0;
 }
 .item_box{
-  width: 95%;
+    width: 95%;
     background-color: #fff;
     border-radius: 10px;
     margin: 15px auto;
@@ -42,6 +42,10 @@ page{
   border-radius: 50px;
   text-align: center;
   line-height: 50px;
+  position: fixed;
+  left: 50%;
+  bottom: 10%;
+  transform: translate(-50%,-50%);
   color: #fff;
   margin: 30px auto;
   background-image: linear-gradient(to right, #ffc3a0 0%, #ffafbd 100%);
