--- a/pages/comment/comment.wxml
+++ b/pages/comment/comment.wxml
@@ -1,14 +1,14 @@
 <!--pages/problem/problem.wxml-->
 <view class="box">
-    <view class="item_box"  wx:for="{{[1,2,3]}}" wx:key="index">
+    <view class="item_box" wx:for="{{list}}" wx:key="index">
         <view style="display: flex;">
             <van-image class="portrait" round width="70" height="70" src="" />
             <view class="item_box_l">
-                <view>跑步30min</view>
-                <view>价值鸡分:300</view>
+                <view>{{list[index].userorder.name}}</view>
+                <view>价值鸡分:{{list[index].userorder.number}}</view>
             </view>
         </view>
-        <view class="item_box_r">编辑</view>
+        <view class="item_box_r" bindtap="topersonal" id="0" data-item="{{list[index]}}">编辑</view>
     </view>
-    <view class="btn" bindtap="getUserInfo">添加</view>
+    <view class="btn" bindtap="add" bindtap="topersonal" id="1">添加</view>
 </view>
