--- a/pages/personal/personal.wxml
+++ b/pages/personal/personal.wxml
@@ -1,12 +1,13 @@
 <!--pages/personal/personal.wxml-->
 <view>
   <view class="box">
-    <van-field value="{{}}" label="任务内容" placeholder="请输入任务内容" input-class="input-class" bind:input="getuser" data-value="name" />
-    <van-field value="{{}}" border="{{ false }}" type="number" label="任务鸡分" placeholder="请输入任务鸡粉" bind:input="getuser" data-value="phone" />
+    <van-field value="{{name}}" label="任务内容" placeholder="请输入任务内容" input-class="input-class" bind:input="getuser" data-value="name" />
+    <van-field value="{{number}}" border="{{ false }}" type="number" label="任务鸡分" placeholder="请输入任务鸡粉" bind:input="getuser" data-value="number" />
   </view>
   <view class="img">
-      <view style="margin-bottom: 10px;">任务图片</view>
-      <van-uploader file-list="{{ fileList }}" bind:after-read="afterRead" max-count="1" ></van-uploader>
+      <view style="margin-bottom: 10px;">任务图片(非必传)</view>
+      <van-uploader  file-list="{{ fileList }}" bind:after-read="afterRead" bind:delete="delImg" max-count="1" ></van-uploader>
     </view>
-  <view class="btn" bindtap="getUserInfo">添加</view>
+    <view class="btn2" wx:if="{{type}}" bindtap="delDiray" data-value="item._id">删除</view>
+    <view class="btn" bindtap="addDiray">{{type?'保存':'添加'}}</view>
 </view>
