--- a/pages/personal/personal.wxss
+++ b/pages/personal/personal.wxss
@@ -20,7 +20,7 @@ page{
   font-size: 15px;
   box-sizing: border-box;
 }
-.btn{
+.btn,.btn2{
   width: 200px;
   height: 50px;
   position: fixed;
@@ -34,6 +34,9 @@ page{
   background-image: linear-gradient(to right, #ffc3a0 0%, #ffafbd 100%);
   box-shadow: -1px 9px 11px 0px rgb(228 49 49 / 23%);
   transition: .5s all;
+}
+.btn2{
+  bottom: 20%;
 }
 .btn:hover{
   background-image: linear-gradient(to right, #faae81 0%, #fc99aa 100%);
