--- a/pages/comment/comment.wxml
+++ b/pages/comment/comment.wxml
@@ -1,8 +1,8 @@
 <!--pages/problem/problem.wxml-->
 <view class="box">
     <view class="item_box" wx:for="{{list}}" wx:key="index">
-        <view style="display: flex;">
-            <van-image class="portrait" round width="70" height="70" src="" />
+        <view style="display: flex;alignItems: center;">
+            <van-image class="portrait" round width="50" height="50" src="{{list[index].userorder.url==''?'cloud://cloud1-9gor3jg0a7f2b30a.636c-cloud1-9gor3jg0a7f2b30a-1306416878/手绘女孩.png':list[index].userorder.url}}" />
             <view class="item_box_l">
                 <view>{{list[index].userorder.name}}</view>
                 <view>价值鸡分:{{list[index].userorder.number}}</view>
