--- a/pages/details/details.wxss
+++ b/pages/details/details.wxss
@@ -1,190 +1,43 @@
-/* pages/details/details.wxss */
+/* pages/personal/personal.wxss */
 page{
-  background-color: rgba(243, 243, 243, 0.288);
+  background-color: #EBEDF0;
 }
-.datailstopbox1{
-  position: relative;
+.box{
+    width: 95%;
+    background-color: #fff;
+    border-radius: 10px;
+    margin: 15px auto;
+    padding: 15px 0;
+    font-size: 15px;
+    box-sizing: border-box;
 }
-.datailstopbox1,.datailstopbox2,.datailstopbox3{
+.img{
   width: 95%;
-  height: 80px;
   background-color: #fff;
-  border-radius: 5px;
-  margin: 10px auto;
-  margin-bottom: 0;
+  border-radius: 10px;
+  margin: 15px auto;
+  padding: 15px;
+  font-size: 15px;
+  box-sizing: border-box;
 }
-.datailstopbox2{
-  height: 200px;
-  margin: 0px auto;
-  border-top: 1px solid rgb(224, 224, 224);
-}
-.datailstopbox3{
-  height: 180px;
-}
-.custom {
-  width: 90%;
-  height: 50px !important;
-  display: block !important;
-  line-height: 50px !important;
-  margin-top: 50px;
-  font-size: 18px !important ;
-}
-.datailstopblk{
-    width: 50%;
-    height: 100%;
-    /* background-color: aqua; */
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    padding-left: 15px;
-}
-.datailstopblk text:nth-child(1){
-  font-weight: bold;
-}
-.datailstopblk2{
-  font-size: 12px;
-  margin-top: 10px;
-  color: rgb(6, 168, 0);
-}
-.datailstopblk3{
-  position: absolute;
-  font-size: 14px;
-  color: rgb(187, 187, 187);
-  right: 0;
-  top: 50%;
-  transform: translate(-10%,-50%);
-}
-.fillbox1{
-  padding: 10px 15px;
-}
-.fillbox1 text:nth-child(1){
-  font-size: 20px;
-  color: rgb(255, 38, 0);
-  margin-right: 8px;
-}
-.fillbox1 text:nth-child(2){
-  color: rgb(148, 148, 148);
-}
-.fillbox2,.fillbox3{
-  display: flex;
-  justify-content: space-between;
-  padding: 10px 15px;
-  align-items: center;
-}
-.fillbox2 .fill{
-  width: 100px;
-  height: 40px;
-  border: 1px solid rgb(37, 197, 31);
-  border-radius: 2px;
-}
-.fill{
-  font-size: 14px;
-  color: rgb(37, 197, 31);
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-.fill text:nth-child(2){
-  font-size: 11px;
-}
-.stepper{
-  border: 1px solid rgb(230, 230, 230);
-  border-radius: 8px;
-}
-.stepper-input{
-  border-radius: 4px !important;
-  color: #000 !important;
-}
-.stepper-plus,.stepper-minus{
-  background-color: #fff !important;
-}
-.sizeclass{
-  font-size: 12px;
-}
-.fillbox4{
-  padding: 10px 15px;
-}
-.box3blo1{
-  padding: 10px 15px;
-  display: flex;
-  align-items: center;
-  font-weight: bold;
-}
-van-popup{
-  position: relative;
-}
-van-popup .van-icon:before{
+.btn,.btn2{
+  width: 200px;
+  height: 50px;
   position: fixed;
-  right: 10px;
-}
-van-popup .popupbox {
-  height: 100vh;
-  display: flex;
-  flex-direction: column;
-  background-color: rgb(230, 230, 230);
-}
-.popuptitlebox{
-  width: 100%;
-  height: 45rpx;
-  position: fixed;
-  background-color: #fff;
-  padding: 15px 0px;
-}
-.popupimg{
-  border: 2px solid #fff;
-  position: relative;
-  left: 30rpx;
-  top: -100rpx;
-}
-.popuptitlebox text{
-  position: absolute;
-  margin-left:80rpx;
-  font-weight: bold;
-}
-.contenttitle{
-  margin-top: 120rpx;
-  background-color: #fff;
-  padding: 20rpx 20rpx;
-  font-size: 22rpx;
-}
-.contenttitle text:first-child{
-  font-size: 30rpx;
-}
-.contenttitle .datebox{
-  margin: 15rpx 0;
-  width: 300rpx;
-  height: 50rpx;
-  line-height: 50rpx;
-  border-radius: 5rpx;
-  border: 1px solid rgb(0, 197, 43);
-  display: flex;
-}
-.contenttitle .datebox view{
-  width: 50rpx;
-  height: 50rpx;
+  left: 50%;
+  bottom: 10%;
+  transform: translate(-50%,-50%);
+  border-radius: 50px;
   text-align: center;
-  background-color: rgb(0, 197, 43);
+  line-height: 50px;
   color: #fff;
-  margin-right: 18rpx ;
+  background-image: linear-gradient(to right, #ffc3a0 0%, #ffafbd 100%);
+  box-shadow: -1px 9px 11px 0px rgb(228 49 49 / 23%);
+  transition: .5s all;
 }
-.contenttitle text{
-  padding: 0 5px;
-  border-left:4px solid rgb(0, 170, 23) ;
+.btn2{
+  bottom: 20%;
 }
-.content{
-  margin-top: 1px;
-  background-color: #fff;
-}
-.content{
-  padding: 0 20rpx;
-  font-size: 24rpx;
-}
-.content text:first-child{
-  padding: 30rpx 0;
-  margin: 0 auto;
-  font-size: 40rpx;
-  display:flex;
-  align-items:center;
-  justify-content:center;
+.btn:hover{
+  background-image: linear-gradient(to right, #faae81 0%, #fc99aa 100%);
 }
