--- a/pages/notice/notice.wxml
+++ b/pages/notice/notice.wxml
@@ -1,2 +1,14 @@
-<view>
+<!--pages/problem/problem.wxml-->
+<view class="box">
+    <view class="item_box" wx:for="{{list}}" wx:key="index">
+      <view style="display: flex;alignItems: center;">
+            <van-image class="portrait" round width="50" height="50" src="{{list[index].rewardList.url==''?'cloud://cloud1-9gor3jg0a7f2b30a.636c-cloud1-9gor3jg0a7f2b30a-1306416878/手绘女孩.png':list[index].rewardList.url}}" />
+            <view class="item_box_l">
+                <view>{{list[index].rewardList.name}}</view>
+                <view>价值鸡分:{{list[index].rewardList.number}}</view>
+            </view>
+        </view>
+        <view class="item_box_r" bindtap="topersonal" id="0" data-item="{{list[index]}}">编辑</view>
+    </view>
+    <view class="btn" bindtap="add" bindtap="topersonal" id="1">添加</view>
 </view>
