--- a/pages/personal/personal.wxml
+++ b/pages/personal/personal.wxml
@@ -8,6 +8,6 @@
       <view style="margin-bottom: 10px;">任务图片(非必传)</view>
       <van-uploader  file-list="{{ fileList }}" bind:after-read="afterRead" bind:delete="delImg" max-count="1" ></van-uploader>
     </view>
-    <view class="btn2" wx:if="{{type}}" bindtap="delDiray" data-value="item._id">删除</view>
+    <view class="btn2" wx:if="{{type}}" bindtap="delDiray" data-value="{{item._id}}">删除</view>
     <view class="btn" bindtap="addDiray">{{type?'保存':'添加'}}</view>
 </view>
