--- a/pages/problem/problem.wxml
+++ b/pages/problem/problem.wxml
@@ -1,13 +1,13 @@
 <!--pages/problem/problem.wxml-->
 <view class="box">
-    <view class="item_box"  wx:for="{{[1,2,3]}}" wx:key="index">
-        <view style="display: flex;">
-            <van-image class="portrait" round width="70" height="70" src="" />
+    <view class="item_box"  wx:for="{{list}}" wx:key="index">
+        <view style="display: flex;alignItems: center;">
+            <van-image class="portrait" round width="50" height="50" src="{{list[index].userorder.url==''?'cloud://cloud1-9gor3jg0a7f2b30a.636c-cloud1-9gor3jg0a7f2b30a-1306416878/手绘女孩.png':list[index].userorder.url}}" />
             <view class="item_box_l">
-                <view>跑步30min</view>
-                <view>价值鸡分:300</view>
+                <view>{{list[index].userorder.name}}</view>
+                <view>价值鸡分:{{list[index].userorder.number}}</view>
             </view>
         </view>
-        <view class="item_box_r">完成</view>
+        <view class="item_box_r" bindtap="complete" data-item="{{list[index].rewardList}}"data-id="{{list[index]._id}}">{{list[index].rewardList.status?'完成':'已完成'}}</view>
     </view>
 </view>
