--- a/pages/security/security.wxml
+++ b/pages/security/security.wxml
@@ -1,12 +1,12 @@
 <view class="box">
-    <view class="item_box"  wx:for="{{[1,2,3]}}" wx:key="index">
-        <view style="display: flex;">
-            <van-image class="portrait" round width="70" height="70" src="" />
+    <view class="item_box"  wx:for="{{list}}" wx:key="index">
+        <view style="display: flex;alignItems: center;">
+            <van-image class="portrait" round width="50" height="50" src="{{list[index].rewardList.url==''?'cloud://cloud1-9gor3jg0a7f2b30a.636c-cloud1-9gor3jg0a7f2b30a-1306416878/手绘女孩.png':list[index].rewardList.url}}" />
             <view class="item_box_l">
-                <view>可乐X1</view>
-                <view>所需鸡分:300</view>
+                <view>{{list[index].rewardList.name}}</view>
+                <view>所需鸡分:{{list[index].rewardList.number}}</view>
             </view>
         </view>
-        <view class="item_box_r">兑换</view>
+        <view class="item_box_r" bindtap="duihuan" data-item="{{list[index].rewardList}}"data-id="{{list[index]._id}}">{{list[index].rewardList.status?'兑换':'已兑换'}}</view>
     </view>
 </view>
