--- a/pages/evaluate/evaluate.wxml
+++ b/pages/evaluate/evaluate.wxml
@@ -1,1 +1,11 @@
-<view></view>
+<view class="box">
+    <view class="title">
+      <view>操作内容</view>
+      <view>鸡分变化</view>
+    </view>
+    <view class="title item" wx:for="{{list}}" wx:key="index">
+      <view>{{list[index].list.type==0?'完成了 ':'兑换了 '}}{{list[index].list.name}}</view>
+      <view wx:if="{{list[index].list.type==0}}" class="number1">+{{list[index].list.number}}</view>
+      <view wx:else class="number2">{{list[index].list.number}}</view>
+    </view>
+</view>
