--- a/pages/evaluate/evaluate.wxss
+++ b/pages/evaluate/evaluate.wxss
@@ -15,24 +15,40 @@ page{
   display: flex;
   justify-content: space-between;
   font-size: 14px;
+  text-align: center;
+  align-items: center;
   color: #656C74;
 }
 .title view:nth-child(1){
-  width: 220px;
+  width: 200px;
   /* background-color: aqua; */
+
 }
 .title view:nth-child(2){
-  width: 60px;
-  text-align: right;
-  flex-wrap: wrap;
+  width: 100px;
+  text-align: center;
   /* background-color: aqua; */
+}
+.title view:nth-child(3){
+  width: 150px;
+  text-align: center;
 }
 .item{
   margin-top: 20px;
+  text-align: center;
+}
+.item view:nth-child(1){
+  width: 200px;
+  overflow:hidden;
+	text-overflow:ellipsis;
+	white-space:nowrap
 }
 .item .number1{
   color: rgb(0, 206, 0);
 }
 .item .number2{
   color: red;
+}
+.time{
+  width: 150px !important;
 }
