--- a/pages/orderdetails/orderdetails.wxss
+++ b/pages/orderdetails/orderdetails.wxss
@@ -1,8 +1,101 @@
 /* pages/orderdetails/orderdetails.wxss */
-.centerbox{
-  height:150px ;
+page {
+  background-color: #EBEDF0;
+}
+
+.centerbox {
+  width: 95%;
+  background-color: #fff;
+  padding: 10px 20px;
+  margin: 20px auto;
+  box-sizing: border-box;
+  border-radius: 10px;
+  box-shadow: -3px 2px 11px 0px rgb(228 49 49 / 10%);
+}
+
+.box {
   display: flex;
-  flex-direction: column;
+  justify-content: space-between;
   align-items: center;
-  justify-content: space-around;
+  padding: 15px 0;
+  /* background-color: aquamarine; */
+  border-bottom: 1px solid rgb(216 216 216 / 25%);
+}
+
+.box:last-child {
+  border: none;
+}
+
+.box view:nth-child(1) {
+  color: #303B47;
+}
+
+.inputc {
+  display: flex;
+}
+
+.tag {
+  min-height: 500px;
+}
+
+.inputc input {
+  margin-right: 5px;
+}
+
+.btn,.btn2{
+  width: 200px;
+  height: 50px;
+  border-radius: 50px;
+  text-align: center;
+  line-height: 50px;
+  position: fixed;
+  left: 50%;
+  bottom: 0%;
+  transform: translate(-50%, -50%);
+  color: #fff;
+  margin: 30px auto;
+  background-image: linear-gradient(to right, #ffc3a0 0%, #ffafbd 100%);
+  box-shadow: -3px 2px 11px 0px rgb(228 49 49 / 10%);
+  transition: .5s all;
+}
+
+.btn:hover {
+  background-image: linear-gradient(to right, #faae81 0%, #fc99aa 100%);
+}
+.btn2{
+  bottom: 8%;
+}
+
+.van-swipe-cell__left,
+.van-swipe-cell__right {
+  display: inline-block;
+  width: 65px;
+  height: 65px;
+  font-size: 15px;
+  line-height: 120px;
+  color: #fff;
+  border-radius: 2px;
+  text-align: center;
+  background-color: #f44;
+}
+.box2{
+  width: 95%;
+  background-color: #fff;
+  padding:10px 20px;
+  box-sizing: border-box;
+  margin: 0px auto;
+  border-radius: 10px;
+  box-shadow: -1px 6px 20px 2px rgb(255 170 170 / 10%);
+}
+.box2:nth-child(1){
+  margin: 5px auto;
+}
+.box2_item{
+  display: flex;
+  justify-content: space-between;
+  padding: 15px 0;
+  border-bottom: 1px solid rgb(216 216 216 / 25%);
+}
+.box2_item:last-child{
+  border: none;
 }
